plugins {
	id 'org.springframework.boot' version '2.3.4.RELEASE'
	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
}

group = 'au.com.dius.pactworkshop'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '8'

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	testImplementation 'com.github.tomakehurst:wiremock:2.27.2'
	testImplementation 'au.com.dius.pact.consumer:java8:4.1.7'
	testImplementation 'au.com.dius.pact.consumer:junit5:4.1.7'
}

test {
	useJUnitPlatform()
}

bootRun{
	standardInput = System.in
}
